# dotnet_stack

./: .gitignore  LICENSE  README.md  TODO.md  print_interface  print_interface.cpp
dotnect_custom_msgs/: CMakeLists.txt  package.xml
dotnect_custom_msgs/msg/: Float64Array.msg  Int32Array.msg
dotnect_custom_msgs/srv/: DotnectUi.srv
dotnect_dgram_socket/: CMakeLists.txt  package.xml
dotnect_dgram_socket/src/: dotnect_dgram_socket.cpp
dotnect_dgram_socket/test/: test_dotnect_dgram_socket.cpp
dotnect_launch/: CMakeLists.txt  package.xml
dotnect_launch/config/: rviz_config.rviz
dotnect_launch/launch/: dotnect.launch
dotnect_markers/: CMakeLists.txt  package.xml
dotnect_markers/include/: custom_defines.h
dotnect_markers/src/: dotnect_markers.cpp
dotnect_platform/: CMakeLists.txt  package.xml
dotnect_platform/include/: custom_defines.h  data_container.h  moving_average.h  tracking_class.h  val3_fstream_socket.h
dotnect_platform/src/: data_container.cpp  dotnect_platform.cpp  gen_val3_class.cpp  moving_average.cpp  tracking_class.cpp  val3_fstream_socket.cpp
dotnect_platform/test/: test_ui_signals.cpp
dotnect_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
dotnect_rviz_plugin/include/: dotnect_window.h
dotnect_rviz_plugin/media/: green_cone.dae
dotnect_rviz_plugin/resource/: dotnect_window.ui
dotnect_rviz_plugin/scripts/: test_joints.py
dotnect_stack/: CMakeLists.txt  package.xml
install/: gitcloneRospackDependencies.sh  installKinect1.sh  rot.bag
