<?xml version="1.0"?>
<package>
  <name>dotnect_dgram_socket</name>
  <version>0.0.0</version>
  <description> Repository -> README.md </description>
  <maintainer email="fake@mail.de">none</maintainer>
  <license>BSD-3-Clause</license>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
