<?xml version="1.0"?>
<package>
  <name>dotnect_markers</name>
  <version>0.0.0</version>
  <description> Repository -> README.md </description>
  <maintainer email="fake@mail.de">none</maintainer>
  <license>BSD-3-Clause</license>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dotnect_custom_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>dotnect_custom_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
