<package>
  <name>dotnect_rviz_plugin</name>
  <version>0.0.0</version>
  <description> Repository -> README.md </description>
  <maintainer email="fake@mail.de">none</maintainer>
  <license>BSD-3-Clause</license>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <author>ItsmeJulian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
